[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]

disable = [
  "missing-docstring",
  "import-error",
  "no-member",
  "line-too-long",
  "fixme",
  "too-few-public-methods",
  "no-name-in-module",
]

[tool.pylint.basic]

good-names = [
  "_",
  "e",
  "ex",
  "f",
  "i",
  "j",
  "k",
  "Run",
  "s",
  "x",
  "y",
  "z",
]
